--- a/package.json
+++ b/package.json
@@ -1,14 +1,25 @@
 {
-  "name": "ajaib-interview-test",
-  "version": "0.0.1",
-  "description": "Ajaib Interview Test for Senior Web Engineer",
-  "main": "index.js",
-  "repository": "https://github.com/xxidbr9/ajaib-interview-test.git",
-  "author": "Barnando Akbarto Hidayatullah <barnando13@gmail.com>",
-  "license": "MIT",
-  "private": false,
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  }
+    "name": "ajaib-interview-test",
+    "version": "0.0.1",
+    "description": "Ajaib Interview Test for Senior Web Engineer",
+    "main": "index.js",
+    "repository": "https://github.com/xxidbr9/ajaib-interview-test.git",
+    "author": "Barnando Akbarto Hidayatullah <barnando13@gmail.com>",
+    "license": "MIT",
+    "private": false,
+    "scripts": {
+        "dev": "",
+        "serve": "",
+        "build": ""
+    },
+    "dependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    },
+    "devDependencies": {
+        "@types/node": "^18.6.3",
+        "@types/react": "^18.0.15",
+        "@types/react-dom": "^18.0.6",
+        "typescript": "^4.7.4"
+    }
 }
