--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "license": "MIT",
     "private": false,
     "scripts": {
-        "dev": "",
+        "dev": "NODE_ENV=development webpack serve --config ./webpack/webpack.development.ts",
         "serve": "",
         "build": ""
     },
@@ -17,9 +17,32 @@
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
+        "@babel/core": "^7.18.9",
+        "@babel/plugin-transform-runtime": "^7.18.9",
+        "@babel/preset-env": "^7.18.9",
+        "@babel/preset-react": "^7.18.6",
+        "@babel/preset-typescript": "^7.18.6",
+        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+        "@types/dotenv-webpack": "^7.0.3",
         "@types/node": "^18.6.3",
         "@types/react": "^18.0.15",
         "@types/react-dom": "^18.0.6",
-        "typescript": "^4.7.4"
+        "babel-loader": "^8.2.5",
+        "babel-plugin-module-resolver": "^4.1.0",
+        "clean-webpack-plugin": "^4.0.0",
+        "copy-webpack-plugin": "^11.0.0",
+        "css-loader": "^6.7.1",
+        "dotenv-webpack": "^8.0.0",
+        "html-webpack-plugin": "^5.5.0",
+        "less-loader": "^11.0.0",
+        "mini-css-extract-plugin": "^2.6.1",
+        "react-refresh": "^0.14.0",
+        "style-loader": "^3.3.1",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.7.4",
+        "webpack": "^5.74.0",
+        "webpack-cli": "^4.10.0",
+        "webpack-dev-server": "^4.9.3",
+        "webpack-merge": "^5.8.0"
     }
 }
