--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "private": false,
     "scripts": {
         "dev": "NODE_ENV=development webpack serve --config ./webpack/webpack.development.ts",
-        "serve": "",
-        "build": ""
+        "serve": "serve -s dist",
+        "clean": "rimraf dist",
+        "prebuild": "yarn clean",
+        "build": "NODE_ENV=production yarn prebuild && webpack --config ./webpack/webpack.production.ts"
     },
     "dependencies": {
         "react": "^18.2.0",
@@ -32,11 +34,14 @@
         "clean-webpack-plugin": "^4.0.0",
         "copy-webpack-plugin": "^11.0.0",
         "css-loader": "^6.7.1",
+        "css-minimizer-webpack-plugin": "^4.0.0",
         "dotenv-webpack": "^8.0.0",
         "html-webpack-plugin": "^5.5.0",
         "less-loader": "^11.0.0",
         "mini-css-extract-plugin": "^2.6.1",
         "react-refresh": "^0.14.0",
+        "rimraf": "^3.0.2",
+        "serve": "^14.0.1",
         "style-loader": "^3.3.1",
         "ts-node": "^10.9.1",
         "typescript": "^4.7.4",
