--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "jsx": "react",
     "typeRoots": ["./src/utils/types/*"],
     "types": ["node"],
+    "baseUrl": ".",
     "paths": {
       "@api/*": ["./src/api/*"],
       "@app-types/*": ["./src/utils/types/*"],
