--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "precommit": "commitlint",
     "dev": "NODE_ENV=development webpack serve --config ./webpack/webpack.development.ts",
     "lint": "lint-staged --allow-empty --config lint.config.js",
+    "test": "jest",
     "clean": "rimraf dist",
     "prebuild": "yarn clean",
     "build": "NODE_ENV=production yarn prebuild && webpack --config ./webpack/webpack.production.ts",
@@ -30,7 +31,9 @@
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@testing-library/react": "^13.3.0",
     "@types/dotenv-webpack": "^7.0.3",
+    "@types/jest": "^28.1.6",
     "@types/node": "^18.6.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
@@ -52,9 +55,12 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "less-loader": "^11.0.0",
     "lint-staged": "^13.0.3",
     "mini-css-extract-plugin": "^2.6.1",
+    "msw": "^0.44.2",
     "prettier": "^2.7.1",
     "react-refresh": "^0.14.0",
     "rimraf": "^3.0.2",
