--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "noEmit": true,
     "jsx": "react",
     "typeRoots": ["./src/utils/types/*"],
-    "types": ["node"],
+    "types": ["node", "jest", "@types/jest"],
     "baseUrl": ".",
     "paths": {
       "@api/*": ["./src/api/*"],
