--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 # yaml-language-server: $schema=https://json-schema.org/draft-07/schema#
 name: Testing in Pull Request
 on:
-  push:
+  pull:
     branches:
     - development
     - master
