--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,6 @@
 # yaml-language-server: $schema=https://json-schema.org/draft-07/schema#
 name: Testing in Pull Request
-on:
-  pull:
-    branches:
-    - development
-    - master
+on: [pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -12,7 +8,7 @@ jobs:
       - name: Checkout Code 🛎️
         uses: actions/checkout@v3
         with:
-          persist-credentials: false 
+          persist-credentials: false
 
       - name: Run Jest tests 🧪
         run: |
