ci: change config and use existing result

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,10 @@ jobs:
       - name: Run Jest tests 🧪
         run: |
           yarn
-          yarn test --coverage
+          yarn test --ci --json --coverage --testLocationInResults --outputFile=./coverage/report.json
 
       - name: Comment Test Coverage 💬
         uses: ArtiomTr/jest-coverage-report-action@v2
+        with:
+          github-token: ${{ secrets.ACCESS_TOKEN }}
+          coverage-file: ./coverage/report.json
