ci: change from npm to yarn

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,13 +15,12 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: Run Jest tests 🧪
-        run: |
-          yarn
-          yarn test --ci --json --coverage --testLocationInResults --outputFile=./coverage/report.json
-
+      - name: Install Run Jest tests 🧪
+        run: yarn
+          
       - name: Comment Test Coverage 💬
         uses: ArtiomTr/jest-coverage-report-action@v2
         with:
+          test-script: yarn test --ci --json --coverage --testLocationInResults --outputFile=./coverage/report.json
           github-token: ${{ secrets.ACCESS_TOKEN }}
           coverage-file: ./coverage/report.json
