--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,11 +16,12 @@ jobs:
           persist-credentials: false
 
       - name: Install Run Jest tests 🧪
-        run: yarn
+        run: |
+          yarn
+          yarn test --ci --json --coverage --testLocationInResults --outputFile=./coverage/report.json
           
       - name: Comment Test Coverage 💬
         uses: ArtiomTr/jest-coverage-report-action@v2
         with:
-          test-script: yarn test --ci --json --coverage --testLocationInResults --outputFile=./coverage/report.json
           # github-token: ${{ secrets.ACCESS_TOKEN }}
           coverage-file: ./coverage/report.json
