--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,14 +13,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           persist-credentials: false
-
-      - name: Install Run Jest tests 🧪
-        run: |
-          yarn
-          yarn test --ci --json --coverage --testLocationInResults --outputFile=./coverage/report.json
-          
+ 
       - name: Comment Test Coverage 💬
         uses: ArtiomTr/jest-coverage-report-action@v2
         with:
+          package-manager: yarn
+          test-script: yarn test --ci --json --coverage --testLocationInResults --outputFile=./coverage/report.json
           skip-step: all
           coverage-file: ./coverage/report.json
