--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,7 +30,9 @@
     "import/prefer-default-export": "off",
     "import/no-extraneous-dependencies": [
       "error",
-      { "devDependencies": ["**/*.test.ts", "**/*.test.tsx"] }
+      {
+        "devDependencies": ["**/*.test.ts", "**/*.test.tsx", "**/webpack.*.ts"]
+      }
     ],
     "import/extensions": [
       "error",
@@ -40,6 +42,13 @@
         "jsx": "never",
         "ts": "never",
         "tsx": "never"
+      }
+    ],
+    "react/function-component-definition": [
+      2,
+      {
+        "namedComponents": "arrow-function",
+        "unnamedComponents": "arrow-function"
       }
     ]
   },
