--- a/package.json
+++ b/package.json
@@ -13,14 +13,21 @@
     "dev": "NODE_ENV=development webpack serve --config ./webpack/webpack.development.ts",
     "lint": "lint-staged --allow-empty --config lint.config.js",
     "test": "jest",
-    "clean": "rimraf dist",
+    "clean": "rimraf dist coverage",
     "prebuild": "yarn clean",
     "build": "NODE_ENV=production yarn prebuild && webpack --config ./webpack/webpack.production.ts",
     "serve": "serve -s dist"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "antd": "^4.22.2",
+    "axios": "^0.27.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "redux": "^4.2.0",
+    "redux-saga": "^1.1.3",
+    "redux-toolkit": "^1.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.18.9",
@@ -37,6 +44,7 @@
     "@types/node": "^18.6.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-helmet": "^6.1.5",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "babel-loader": "^8.2.5",
@@ -53,10 +61,12 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
+    "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "lint-staged": "^13.0.3",
     "mini-css-extract-plugin": "^2.6.1",
