--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@commitlint/config-conventional": "^17.0.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@testing-library/react": "^13.3.0",
+    "@types/brotli-webpack-plugin": "^1.1.2",
     "@types/dotenv-webpack": "^7.0.3",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.6.3",
@@ -49,6 +50,7 @@
     "@typescript-eslint/parser": "^5.31.0",
     "babel-loader": "^8.2.5",
     "babel-plugin-module-resolver": "^4.1.0",
+    "brotli-webpack-plugin": "^1.1.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
