--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@reduxjs/toolkit": "^1.8.3",
     "antd": "^4.22.2",
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-redux": "^8.0.2",
     "redux": "^4.2.0",
-    "redux-saga": "^1.1.3",
-    "redux-toolkit": "^1.1.2"
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.18.9",
