--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@reduxjs/toolkit": "^1.8.3",
     "antd": "^4.22.2",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
